@@ -2,4 +2,5 @@
 FROM jdk-9-debian-slim
 COPY target/helloworld-1.0-SNAPSHOT.jar /opt/helloworld/helloworld-1.0-SNAPSHOT.jar
 # Set up env variables
-CMD java -cp /opt/helloworld/helloworld-1.0-SNAPSHOT.jar org.examples.java.App
+CMD java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap \
+  -cp /opt/helloworld/helloworld-1.0-SNAPSHOT.jar org.examples.java.App
